--- a/zh-cn/css/main.css
+++ b/zh-cn/css/main.css
@@ -1148,7 +1148,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffc3b6;
+  background: #ffffe9;
 }
 .sidebar-nav {
   margin: 0;
