--- a/zh-Hans/css/main.css
+++ b/zh-Hans/css/main.css
@@ -1156,7 +1156,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #03776a;
+  background: #f4fff2;
 }
 .sidebar-nav {
   margin: 0;
