--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #22ff17;
+  background: #75c638;
 }
 .sidebar-nav {
   margin: 0;
