--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #5dffff;
+  background: #1b6c34;
 }
 .sidebar-nav {
   margin: 0;
